just the design to change

--- a/desktop-app/templates/swipe.html
+++ b/desktop-app/templates/swipe.html
@@ -10,8 +10,11 @@
       </div>
       <div ng-show="allPeople.length > 0">
         <div class="responsive-profile">
-          <div class="main-photo-container">
+          <div id="viewport">
+            <ul class="stack">
+            </ul>
           </div>
+          
           <!-- information including bio etc -->
           <div class="profile">
             <div class="information">
