--- a/desktop-app/css/app.css
+++ b/desktop-app/css/app.css
@@ -68,6 +68,22 @@ body:first-child {
   overflow: hidden;
 }
 
+.banner{
+  width: 100%;
+  height: 100px;
+  border-bottom: 1px solid #EBEBEB;
+}
+
+.container{
+  width: 100%;
+  height: 598px;
+}
+
+#title{
+  width: 100%;
+  height: 70px;
+}
+
 .wrapper-menu{
   width: 200px;
   height: 768px;
@@ -79,7 +95,6 @@ body:first-child {
   width: 1000px;
   height: 768px;
   float:left;
-  background-color: black;
 }
 
 /* Menu.html */
@@ -94,6 +109,152 @@ body:first-child {
 }
 
 .menu-item{
-  
+  padding: 20px;
 }
 
+.menu-item a{
+  text-decoration: none;
+  font-weight: 300;
+  color:#95A5A6;
+}
+
+.menu-item span{
+  padding-right: 10px;
+}
+
+.menu-item:hover{
+  background-color: #243342;
+}
+
+.menu-item:hover span{
+  color:white;
+}
+
+.menu-item:hover .fa{
+  color:#FF6B6B;
+}
+
+.menu-item-activate{
+  background-color: #243342;
+}
+
+.menu-item .activate span{
+  color:white;
+}
+
+.menu-item .activate .fa{
+  color:#FF6B6B;
+}
+
+/* Swipe.html */
+#viewport .stack {
+    max-width: 400px;
+    height: 300px;
+    position: absolute;
+    border-radius: 10px; 
+}
+  
+#viewport li {
+    width: 450px;
+    height: 450px;
+    top:35px;
+    list-style: none;
+    border-radius: 5px;
+    border: 5px solid white;
+    display: inline-block;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    cursor: -webkit-grab;
+    box-shadow: 0 0 1px
+}
+
+#viewport li .stampLike{
+  position: absolute;
+  right: 50px;
+  top: 50px;
+  font-size: 100px;
+  color:#A1C820;
+}
+
+#viewport li .stampPass{
+  position: absolute;
+  left: 50px;
+  top: 50px;
+  font-size: 100px;
+  color:#F02311;
+}
+
+#viewport li.in-deck:nth-last-child(1){
+  width: 470px;
+  height: 470px;
+  top: 15px;
+  margin-left:-10px;
+}
+    
+#viewport li.in-deck:nth-last-child(2) {
+  width: 465px;
+  height: 465px;
+  top: 25px;
+  margin-left:-7px;
+}
+
+#viewport li.in-deck:nth-last-child(3) {
+  width: 460px;
+  height: 460px;
+  top: 35px;
+  margin-left:-5px;
+}
+
+#autocompleteLocation {
+    margin-bottom: 20px;
+}
+
+
+
+.profile{
+  position: relative;
+  top: 30px;
+  left:535px;
+  max-width: 450px;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #DEE1E2;
+}
+
+.profile h1{
+  margin:0;
+  padding:10px;
+  font-weight: 300;
+  color:#697677;
+  font-size: 18pt;
+  padding-left: 10px;
+  border-bottom: 1px solid #DEE1E2;
+}
+
+.profile h3{
+  margin:0;
+  padding:10px;
+  font-weight: 300;
+  color:#697677;
+  font-size: 12pt;
+  padding-left: 10px;
+  border-bottom: 1px solid #DEE1E2;
+}
+
+.profile h1 a{
+  text-decoration: none;
+  color:#A5B4B5;
+}
+
+.profile p {
+  font-size: 11pt;
+  margin:5px;
+  padding-left: 10px;
+  font-weight: 300;
+  color:#586364;
+}
+
+.profile p i{
+  padding-right: 5px;
+}
