--- a/desktop-app/partials/menu.html
+++ b/desktop-app/partials/menu.html
@@ -1,32 +1,31 @@
 <div class="menu" ng-controller="MenuController">
   <div class="menu-logo">
     <a href="">
-    [Place holder for branding]
       </a>
   </div>
   <div class="menu-item">
     <a href="#/swipe">
-    <span class="fa fa-heart fa-lg"></span><span class="text">SWIPE</span>
+    <span class="fa fa-heart fa-lg"></span><span class="text">Swipe</span>
     </a>
   </div>
   <div class="menu-item">
     <a ng-href="#/messages">
-    <span class="fa fa-envelope fa-lg"></span><span class="text">MESSAGES</span>
+    <span class="fa fa-envelope fa-lg"></span><span class="text">Messages</span>
     </a>
   </div>
   <div class="menu-item">
     <a ng-href="#/profile/{{getCookie('userId')}}">
-    <span class="fa fa-picture-o fa-lg"></span><span class="text">PROFILE</span>
+    <span class="fa fa-picture-o fa-lg"></span><span class="text">Profile</span>
     </a>
   </div>
   <div class="menu-item">
     <a href="#/discovery">
-    <span class="fa fa-binoculars fa-lg"></span><span class="text">DISCOVERY</span>
+    <span class="fa fa-binoculars fa-lg"></span><span class="text">Discovery</span>
     </a>
   </div>
-  <div class="menu-item">
+  <div class="menu-item activate">
     <a href="#/settings">
-    <span class="fa fa-cog fa-lg"></span><span class="text">SETTINGS</span>
+    <span class="fa fa-cog fa-lg"></span><span class="text">Settings</span>
     </a>
   </div>
 </div>
