--- a/desktop-app/templates/login.html
+++ b/desktop-app/templates/login.html
@@ -1,6 +1,6 @@
 <div class="fb-login">
   <div class="login-container">
-    <img src="img/icon.png" alt="Tinder Desktop" class="icon" />
-    <a id="sign_in" href="" ng-click="startLogin()"></a>
+    <!-- <img src="img/icon.png" alt="Tinder Desktop" class="icon" /> -->
+    <a id="sign_in" href="" ng-click="startLogin()">Login</a>
   </div>
 </div>
