--- a/desktop-app/templates/swipe.html
+++ b/desktop-app/templates/swipe.html
@@ -1,7 +1,11 @@
 <div class="wrapper">
   <div class="wrapper-menu" ng-include src="'partials/menu.html'"></div>
   <div class="wrapper-page">
-    <div class="container">
+    <div class="banner">
+    </div>
+    <div id="title">
+    </div>
+    <div class="container" style="background-color:#ECF0F1;">
       <div ng-show="allPeople.length === 0">
         <div class="loader">
           {{'SWIPE.LOADING' | translate}}
@@ -25,10 +29,10 @@
               </h1>
               <h3 class="status fader">{{allPeople[allPeople.length-1].distance_mi | distanceToUnits}} {{getCookie('currentCity') ? "from " + getCookie('currentCity') : ('SWIPE.AWAY' | translate)}}, {{'SWIPE.ACTIVE' | translate}} {{allPeople[allPeople.length-1].ping_time | timeFromNow}}</h3>
               <p class="schoolwork fader">
-                <i ng-repeat="school in allPeople[allPeople.length-1].schools" class="school fa fa-graduation-cap">{{school.name}}</i>
-                <i ng-repeat="job in allPeople[allPeople.length-1].jobs" class="work fa fa-briefcase">
+                <p ng-repeat="school in allPeople[allPeople.length-1].schools"><i class="school fa fa-graduation-cap"></i>{{school.name}}</p>
+                <p ng-repeat="job in allPeople[allPeople.length-1].jobs" ><i class="work fa fa-briefcase"></i>
                   {{job.title.name}} {{job.company && job.title ? ('SWIPE.AT' | translate) : ''}} {{job.company.name}}
-                </i>
+                </p>
                 </p>
                 <p ng-show="allPeople[allPeople.length-1].bio" class="bio fader">{{ allPeople[allPeople.length-1].bio }}</p>
             </div>
