--- a/desktop-app/templates/swipe.html
+++ b/desktop-app/templates/swipe.html
@@ -4,6 +4,8 @@
     <div class="banner">
     </div>
     <div id="title">
+      <h1>Swipe</h1>
+      <p>Like remaining : 5</p>
     </div>
     <div class="container" style="background-color:#ECF0F1;">
       <div ng-show="allPeople.length === 0">
