--- a/desktop-app/templates/messages.html
+++ b/desktop-app/templates/messages.html
@@ -56,12 +56,12 @@
             ng-click="$showTimeStamp = !$showTimeStamp"
             style="position:relative">
             <div class="{{message.fromMe ? 'from-me' : 'from-them'}}">
+              <div ng-if="message.text"
+                ng-bind-html="message.text"></div>
               <div class="{{message.fromMe ? 'from-me-date sentAt' : 'from-them-date sentAt'}}"
                 ng-class="{true: 'bounceIn', false: 'bounceOut'}[$showTimeStamp === true]">
                 {{message.sentDate | timeToLocalized}}
               </div>
-              <div ng-if="message.text"
-                ng-bind-html="message.text"></div>
             </div>
           </div>
           <div ng-repeat-end class="messages-in-chat" scroll-to-last></div>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="messages-textarea">
-        <textarea ng-keypress="keypress($event)" ng-model="message" placeholder="{{'MESSAGES.MESSAGE_PLACEHOLDER' | translate}}">
+        <input ng-keypress="keypress($event)" ng-model="message" placeholder="{{'MESSAGES.MESSAGE_PLACEHOLDER' | translate}}">
       </div>
     </div>
   </div>
