--- a/desktop-app/css/app.css
+++ b/desktop-app/css/app.css
@@ -573,3 +573,69 @@ button{
   float: right;
   margin:15px;
 }
+
+fieldset:first-child {
+  margin-top: 40px;
+}
+
+fieldset {
+  border: 1px solid #DEE1E2;
+  border-radius: 3px;
+  position: relative;
+  width: 300px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+legend {
+  position: absolute;
+  top: -40px; left: 0;
+  padding-top: 12px;
+  font-weight: 300;
+}
+
+.switch-wrapper{
+  margin:10px;
+}
+
+.text-switch{
+  float:left;
+}
+.check-switch {
+  float: right;
+}
+.check-switch input {
+  position: absolute;
+  left: -9999px;
+}
+.check-switch input + label {
+  width: 40px;
+  height: 19px;
+  background: #f5f5f5;
+  display: inline-block;
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.2s;
+  z-index: 3;
+}
+
+.check-switch input + label span {
+  position: absolute;
+  height: 15px;
+  top: 2px;
+  left: 3px;
+  border-radius: 42px;
+  width: 15px;
+  background: #dedede;
+  transition: all 0.3s;
+  transform: translate3d(0,0,0);
+}
+
+.check-switch input:checked + label span {
+  background: white;
+  left: calc(100% - 18px);
+}
+.check-switch input:checked + label{
+  background: #FF6B6B;
+}
