--- a/desktop-app/templates/settings.html
+++ b/desktop-app/templates/settings.html
@@ -1,20 +1,11 @@
 <div class="wrapper">
   <div class="wrapper-menu" ng-include src="'partials/menu.html'"></div>
   <div class="wrapper-page">
+    <div id="title">
+      <h1>Settings</h1>
+    </div>
     <div class="settings">
   <form name="tppSettings">
-    <fieldset>
-      <legend translate="SETTINGS.LOCATION"></legend>
-      <p>
-        <a href="" ng-click="toggleLocation()" >{{getCookie('currentCity') ? getCookie('currentCity') : ('SETTINGS.SET_LOCATION' | translate)}}</a>
-      </p>
-      <div ng-show="showLocation">
-        <input type="text" ng-autocomplete ng-model="autocomplete" options="autocompleteOptions" details="details" placeholder="{{'SETTINGS.SET_LOCATION' | translate}}" id="autocompleteLocation" />
-      </div>
-    </fieldset>
-  
-    <br />
-  
     <fieldset>
       <legend translate="SETTINGS.LANDING_PAGE"></legend>
       <label for="landingPage_1">
@@ -31,16 +22,15 @@
     <br/>
 
     <fieldset>
-      <legend translate="SETTINGS.MESSAGES"></legend>
-      <label for="extraInfo_1">
-        <input type="radio" name="extraInfo" id="extraInfo_1" value="yes" ng-model="settings.messageListExtraInfo" ng-change="syncSettings()"/>
-        {{'SETTINGS.EXTRA_INFO_ON' | translate}}
-      </label>
-      <br/>
-      <label for="extraInfo_2">
-        <input type="radio" name="extraInfo" id="extraInfo_2" value="no" ng-model="settings.messageListExtraInfo" ng-change="syncSettings()"/>
-        {{'SETTINGS.EXTRA_INFO_OFF' | translate}}
-      </label>
+      <div class="switch-wrapper">
+        <div class="text-switch">
+          yolo
+        </div>
+        <div class="check-switch">
+          <input type="checkbox" name="extraInfo" id="extraInfo_2" value="no" ng-model="settings.messageListExtraInfo" ng-change="syncSettings()"/>
+          <label for="extraInfo_2"><span><em></em></span></label>
+        </div>
+      </div>
     </fieldset>
 
     <br/>
