--- a/desktop-app/css/app.css
+++ b/desktop-app/css/app.css
@@ -86,6 +86,12 @@ fieldset {
   min-width: 0;
 }
 
+::-webkit-input-placeholder{
+  font-weight: 200;
+  font-size: 11pt;
+  padding: 2px;
+}
+
 #title p{
   margin:0;
   font-weight: 200;
@@ -562,7 +568,6 @@ fieldset {
 }
 
 button{
-  min-width: 100px;
   border: none;
   border-radius: 3px;
   background-color: #FF6B6B;
@@ -607,6 +612,7 @@ legend {
 }
 
 .switch-wrapper{
+  height: 25px;
   margin:3px;
 }
 
@@ -712,7 +718,114 @@ fieldset > .option-input.radio:nth-child(3) {
 }
 
 
-fieldset .option-input.radio::after {
-  
+fieldset .option-input.radio::after {  
   border-radius: 3px;
+}
+
+/* Discovery */
+
+.passportReset{
+  float:right;
+}
+
+.passportReset button{
+  min-width: 20px!important;
+}
+
+.passportComplete{
+  float:left;
+  height: 20px;
+}
+
+.passportComplete input{
+  border:none;
+  border: 1px solid #DEE1E2;
+  padding: 4px;
+  height: 20px;
+  border-radius: 3px;
+}
+
+section.range-slider {
+    overflow: hidden;
+    position: relative;
+    width: 250px;
+    height: 20px;
+}
+
+section.range-slider input {
+    pointer-events: none;
+    position: absolute;
+    overflow: hidden;
+    left: 0;
+    top: 0;
+    width: 250px;
+    outline: none;
+    height: 18px;
+}
+
+ul.from-to {
+    display: block;
+    list-style-type: none;
+    margin-top: 10px;
+    font-family: Arial, Tahoma, Verdana, Arial, Helvetica, sans-serif;
+    font-size: 11px;
+}
+
+ul.from-to li {
+    margin-bottom: 1px;
+}
+
+ul.from-to li label {
+    background-color: rgba(0, 0, 0, .1);
+    height: 24px;
+    line-height: 24px;
+    display: inline-block;
+    width: 60px;
+    padding: 0 10px;
+    float: left;
+    font-size: 9px;
+    color: rgba(0, 0, 0, .25);
+    text-transform: uppercase;
+}
+
+ul.from-to li input {
+    padding: 0 8px;
+    height: 24px;
+    line-height: 24px;
+    outline: none;
+}
+
+input[type=range]{
+  height: 20px;
+  width: 250px;
+  -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  background: #FF6B6B;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  pointer-events: all;
+  position: relative;
+  top:-6px;
+  border-radius: 50%;
+  background-color: #FF6B6B;
+  height: 16px;
+  width: 16px;
+  z-index: 1;
+  outline: 0;
+}
+
+.range{
+  padding: 0;
+  margin-top:5px;
+  margin-left:20px;
 }
