--- a/desktop-app/css/app.css
+++ b/desktop-app/css/app.css
@@ -92,10 +92,8 @@ fieldset {
   padding: 2px;
 }
 
-#title p{
-  margin:0;
-  font-weight: 200;
-  padding-left: 20px;
+#title h1{
+  padding-top: 30px;
 }
 
 #title p{
