--- a/desktop-app/templates/swipe.html
+++ b/desktop-app/templates/swipe.html
@@ -3,7 +3,7 @@
   <div class="wrapper-page">
     <div id="title">
       <h1>Swipe</h1>
-      <p>Like remaining : 5</p>
+      <p ng-if="tinder_plus">Likes remaining : {{likesRemaining}} </p>
     </div>
     <div class="container" style="background-color:#ECF0F1;">
       <div ng-show="allPeople.length === 0">
