--- a/desktop-app/templates/profile.html
+++ b/desktop-app/templates/profile.html
@@ -6,9 +6,9 @@
     </div>
     <div class="container" ng-show="user">
       <div class="responsive-profile">
-          <div id="viewport">
+          <div id="viewport" >
             <ul class="stack">
-              <li class="in-deck" style="background-image: url({{user.photos[photoIndex].processedFiles[0].url}});">          
+              <li class="in-deck" style="cursor:default;background-image: url({{user.photos[photoIndex].processedFiles[0].url}});">          
               </li>
             </ul>
           </div>
