fix unselected age range is colored too

--- a/desktop-app/templates/discovery.html
+++ b/desktop-app/templates/discovery.html
@@ -68,7 +68,7 @@
                                     to_age: Discovery.age_filter.to}">
         </legend>
         <div class="range">
-          <section data-range-slider class="range-slider" ng-model="Discovery.age_filter" min="18" max="55"></section>
+          <section data-range-slider class="range-slider" ng-model="Discovery.age_filter" data-colors="colors" min="18" max="55"></section>
         </div>
       </fieldset>
     </form>
