--- a/desktop-app/css/app.css
+++ b/desktop-app/css/app.css
@@ -291,6 +291,16 @@ a{
   color:#586364;
 }
 
+.profile pre {
+  font-family: 'Montserrat';
+  font-size: 11pt;
+  margin:5px;
+  padding-left: 10px;
+  font-weight: 300;
+  white-space: pre-wrap;
+  color:#586364;
+}
+
 .profile p i{
   padding-right: 5px;
 }
