--- a/desktop-app/templates/discovery.html
+++ b/desktop-app/templates/discovery.html
@@ -19,18 +19,10 @@
       <fieldset ng-show="Discovery.tinder_plus">
         <legend translate="DISCOVERY.PASSPORT"></legend>
         <div class="passportComplete">
-          <div ng-if="Discovery.is_traveling">
             <input type="text" ng-autocomplete ng-model="autocomplete" 
             options="autocompleteOptions" details="details" 
-            placeholder="{{Discovery.currentLocation}}" 
+            placeholder="{{passportPlaceholder}}" 
             id="autocompleteLocation" />
-          </div>
-          <div ng-if="!Discovery.is_traveling">
-            <input type="text" ng-autocomplete ng-model="autocomplete" 
-            options="autocompleteOptions" details="details" 
-            placeholder="Current Location" 
-            id="autocompleteLocation" />
-          </div>
         </div>
         <div class="passportReset">
           <a ng-show="Discovery.is_traveling" href="" ng-click="resetPassport()"><button>Reset</button></a>
